add did document resolver
Signed-off-by: Dominik-Pinsel <dominik.pinsel@daimler.com>